--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -409,7 +409,9 @@ img {
 .container {
   max-width: 1280px;
   padding-left: 20px;
+  padding-left: min(20px, 5vw);
   padding-right: 20px;
+  padding-right: min(20px, 5vw);
   margin: auto;
 }
 
@@ -488,12 +490,12 @@ h2.header {
   border: 1px solid #1a2b49;
   border-radius: 50px;
   padding: 15px 30px;
-  padding: 1.07em 1.875rem;
   background: #1a2b49;
   color: #fff;
   font-size: 14px;
   font-size: 0.875rem;
   text-decoration: none;
+  text-align: center;
 }
 
 .btn:hover,
@@ -550,6 +552,7 @@ h2.header {
   font-weight: 700;
   letter-spacing: 5px;
   font-size: 1.3em;
+  font-size: min(1.3em, 7vw);
   margin-right: -5px; /* fix letter spacing issue for the last letter */
   font-family: 'Poppins', sans-serif;
 }
@@ -605,6 +608,7 @@ footer nav ul {
   align-items: center;
   margin: 0;
   padding-inline-start: 0;
+  flex-wrap: wrap;
 }
 
 header nav li,
@@ -773,6 +777,16 @@ li {
   font-size: 17px;
   font-size: 1.0625rem;
   line-height: 1.6em;
+}
+
+code {
+  word-break: break-all;
+  overflow-wrap: break-word;
+}
+
+pre code {
+  word-break: unset;
+  overflow-wrap: unset;
 }
 
 hr {
@@ -1008,8 +1022,7 @@ p.copyright a {
 #skiptocontent a {
   padding: 6px;
   position: absolute;
-  top: -40px;
-  top: -2.35em;
+  top: -1000px;
   left: 0;
   border-right: 1px solid white;
   border-bottom: 1px solid white;
@@ -1040,6 +1053,7 @@ p.copyright a {
   li {
     font-size: 16px;
     font-size: 1rem;
+    overflow-wrap: break-word;
   }
 
   .title-lg {
@@ -1060,6 +1074,14 @@ p.copyright a {
     padding-bottom: 30px;
   }
 
+  .top-header {
+    flex-wrap: wrap;
+  }
+
+  .navigation-logo {
+    overflow: auto;
+  }
+
   header nav:first-of-type,
   footer nav:first-of-type,
   header .cta {
@@ -1068,7 +1090,16 @@ p.copyright a {
 
   .navigation-logo {
     min-width: auto;
-    max-width: 75vw;
+    max-width: 100%;
+    margin-right: 0;
+  }
+
+  #menu {
+    margin-left: 40px;
+  }
+
+  #menu .menu {
+    overflow: auto;
   }
 
   header nav > ul > li > * {
@@ -1095,6 +1126,10 @@ p.copyright a {
   }
 
   /* Footer */
+  footer {
+    overflow: auto;
+  }
+
   footer .container {
     grid-template-areas:
       'home-logo'
