--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -20,8 +20,8 @@ header.alt-bg {
     '. chapter .'
     'contributors contributors contributors'
     '. methodology .';
-  /* 1500 is same as the .container width */
-  grid-template-columns: 1fr minmax(auto, 1500px) 1fr;
+  /* 1280 is same as the .container width */
+  grid-template-columns: 1fr minmax(auto, 1280px) 1fr;
 }
 
 .featured-chapter,
@@ -181,12 +181,6 @@ p {
   justify-content: space-between;
 }
 
-/*
-.contributors .btn {
-  white-space: nowrap;
-}
-*/
-
 .people {
   position: relative;
   height: 400px;
@@ -244,9 +238,9 @@ p {
 .methodology-data {
   display: flex;
   margin: 20px 0 30px 0;
-  margin: min(5vw, 20px) 0 min(8vw, 30px) 0;
+  margin: min(20px, 5vw) 0 min(30px, 8vw) 0;
   padding: 20px 30px;
-  padding: min(5vw, 20px) min(8vw, 30px);
+  padding: min(20px, 5vw) min(30px, 8vw);
   border-radius: 5px;
   box-shadow: 0 0 5px 5px #f6f7f9;
   flex-wrap: wrap;
@@ -580,8 +574,7 @@ p {
   /* Contributors */
   .contributors-container {
     padding: 0 60px 340px;
-    padding: 0 60px min(340px, 140vw);
-    padding: 0 min(60px, 5vw) min(340px, 140vw);
+    padding: 0 min(60px, 5vw) min(340px, 30vw);
   }
 
   .rectangles {
@@ -598,16 +591,15 @@ p {
 
   .contributors div {
     margin-left: 20px;
-    margin-left: 5vw;
+    margin-left: min(20px, 5vw);
     margin-right: 20px;
-    margin-right: 5vw;
+    margin-right: min (20px, 5vw);
   }
 
   .people {
     position: absolute;
     bottom: 0;
     height: auto;
-    max-width: 100%;
   }
 
   .people-number {
