--- a/src/templates/base/index.html
+++ b/src/templates/base/index.html
@@ -24,6 +24,7 @@
 {% block styles %}
   {{ super() }}
   <link rel="stylesheet" href="{{ get_versioned_filename('/static/css/index.css') }}">
+  <link rel="preload" href="{{ get_versioned_filename('/static/css/index.css') }}" as="style" />
 {% endblock %}
 
 {% block container %}
