--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -1591,3 +1591,67 @@ main a[hreflang]::after {
 html[lang="en"] main a[hreflang="en"]::after {
   content: '';
 }
+
+@media print {
+  .top-header,
+  .index,
+  .discuss,
+  #chapter-navigation,
+  footer .navigation-logo,
+  footer #mobile-footer-nav-items,
+  footer .nav-items,
+  footer .table-of-contents,
+  footer .language-switcher,
+  footer .social-media,
+  footer .accessibility-statement,
+  footer hr {
+    display: none;
+  }
+
+  .alt-bg {
+    background-color: white;
+  }
+
+  a.btn {
+    display: none;
+  }
+
+  h1,
+  h2,
+  h3,
+  p,
+  p.copyright,
+  p.copyright a {
+    color: black;
+  }
+
+  p.copyright {
+    margin: 0 auto;
+  }
+
+  footer .ha-logo {
+    color: #62718b;
+  }
+
+  figure iframe {
+    display: none;
+  }
+
+  figure .fig-mobile {
+    display: block;
+    max-width: 100%;
+  }
+
+  figure iframe.video-embed {
+    display: none;
+  }
+
+  figure .video-fallback-image {
+    display: block;
+  }
+
+  .fig-description-button {
+    display: none;
+  }
+
+}
